--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/generate-sitemap.js && vite build",
-    "build:dev": "node scripts/generate-sitemap.js && vite build --mode development",
+    "build": "node scripts/generate-sitemap.cjs && vite build",
+    "build:dev": "node scripts/generate-sitemap.cjs && vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
   },
