--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,16 @@
 {
     "name": "NumGuru",
     "short_name": "NumGuru",
-    "description": "Discover Your Life Purpose Through Pythagorean Numerology",
-    "icons": [
-        {
-            "src": "/numguru-logo.svg",
-            "sizes": "any",
-            "type": "image/svg+xml",
-            "purpose": "any"
-        }
-    ],
     "start_url": "/",
     "display": "standalone",
     "background_color": "#020202",
-    "theme_color": "#EAB308"
+    "theme_color": "#EAB308",
+    "icons": [
+        {
+            "src": "/favicon.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any maskable"
+        }
+    ]
 }
